<resources>
    <string name="app_name">Financas Sup. Correia</string>
    <string name="action_settings">Settings</string>
    <string name="action_filtro_data">Filtro Data</string>
    <string name="action_boleto">Boleto</string>
    <string name="action_cheque">Cheque</string>
    <string name="action_imposto">Imposto</string>
    <string name="title_activity_boleto">BoletoActivity</string>
    <string name="title_boleto">Boleto</string>
    <string name="title_activity_lancar_boleto">Novo Boleto</string>
    <string name="lbl_codigo">Código</string>
    <string name="lbl_fornecedor">Fornecedor</string>
    <string name="lbl_vencimento">Vencimento</string>
    <string name="lbl_valor">Valor</string>
    <string name="btn_lancar_boleto">Lançar Boleto</string>
    <string name="message_request_nulo_vazio">REQUEST NULO OU VAZIO</string>
    <string name="message_tamanho_codigo_invalido">Tamanho do código inválido.</string>
    <string name="message_erro_vencimento_invalido">Esse vencimento não é válido.</string>
    <string name="message_erro_salvar">Erro ao salvar.</string>
    <string name="message_duplicacao_boleto">Já existe um boleto com esse código de barras no sistema.</string>
    <string name="tile_cad_fornecedor">Cadastrar Fornecedor</string>
    <string name="message_concluido">concluído</string>
    <string name="lbl_data_pago">Data Pago</string>
    <string name="title_activity_cad_fornecedor_boleto">CadFornecedorBoletoActivity</string>
    <string name="lbl_banco">Banco</string>
    <string name="lbl_numero_fornecedor">Número Fornecedor</string>
    <string name="lbl_Confirmar_Cadastro">Confirmar Cadastro</string>
    <string name="lbl_Cheque">Cheque</string>
    <string name="lbl_Imposto">Imposto</string>
    <string name="lbl_Outros">Outros</string>
    <string name="erro_data_inicial_maior_final">ERRO: A data incial é maior que a final.</string>
    <string name="erro_data_inicial_invalida">Data inicial inválida</string>
    <string name="lbl_inicio">Início</string>
    <string name="lbl_fim">Fim</string>
    <string name="lbl_valor_em_aberto">Valor em Aberto</string>
    <string name="lbl_total">Total</string>
    <string name="title_activity_cheque">Cheques</string>
    <string name="lbl_em_aberto">Em Aberto</string>
    <string name="lbl_pago">Pago</string>
    <string name="lbl_Pago">Pago</string>
    <string name="lbl_todos">Todos</string>
    <string name="lbl_emissao_abreviado">E:</string>
    <string name="lbl_vencimento_abreviado">V:</string>
    <string name="lbl_nulo">Nulo</string>
    <string name="message_erro_nao_possivel_baixar_cheque">Não foi possível baixar o cheque.</string>
    <string name="title_activity_lancar_cheque">Novo Cheque</string>
    <string name="lbl_sequencia">Sequência</string>
    <string name="lbl_emissao">Emissão</string>
    <string name="message_informe_sequencia">Informe a Sequência</string>
    <string name="message_informe_emissao">Informe a Emissão</string>
    <string name="message_informe_fornecedor">Informe o Fornecedor</string>
    <string name="message_informe_valor">Informe o Valor</string>
    <string name="message_confirmar_exclusao_cheque">Deseja Excluir esse Cheque?</string>
    <string name="title_confirmacao">Confirmação</string>
    <string name="message_confirmar_baixa_cheque">Deseja dar baixa nesse Cheque?</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="title_activity_imposto">Impostos</string>
    <string name="title_activity_lancar_imposto">Novo Imposto</string>
    <string name="lbl_descricao">Descrição</string>
    <string name="message_informe_descricao">Informe a Descrição</string>
    <string name="message_informe_vencimento">Informe o vencimento</string>
    <string name="message_informe_vencimento_valido">Informe um vencimento válido (Ex: dd/mm/aaaa)</string>
    <string name="message_carregando">Carregando...</string>
    <string name="message_copiado_area_transferencia">Copiado para Área de Transferência</string>
    <string name="lbl_filtrar">Filtrar</string>
    <string name="lbl_dia">Dia</string>
    <string name="lbl_mes">Mês</string>
    <string name="message_erro_cheque_alterar_estado">Não foi possível alterar o estado do cheque.</string>

</resources>
