<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChequeActivity"
    tools:showIn="@layout/activity_cheque">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_cheque_aberto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_em_aberto" />

        <RadioButton
            android:id="@+id/rb_cheque_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pago" />

        <RadioButton
            android:id="@+id/rb_cheque_nulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Pago" />

        <RadioButton
            android:id="@+id/rb_cheque_todos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_todos" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_cheques_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>