<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtBoleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_boleto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editBoletoValorAberto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editBoletoValorAberto" />

    <EditText
        android:id="@+id/editBoletoValorAberto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBoleto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCheque"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Cheque"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editChequeValorAberto"
        app:layout_constraintStart_toStartOf="@+id/txtBoleto"
        app:layout_constraintTop_toTopOf="@+id/editChequeValorAberto" />

    <EditText
        android:id="@+id/editChequeValorAberto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/editBoletoValorAberto"
        app:layout_constraintStart_toStartOf="@+id/editBoletoValorAberto"
        app:layout_constraintTop_toBottomOf="@+id/editBoletoValorAberto" />

    <TextView
        android:id="@+id/txtImposto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Imposto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editImpostoValorAberto"
        app:layout_constraintStart_toStartOf="@+id/txtCheque"
        app:layout_constraintTop_toTopOf="@+id/editImpostoValorAberto" />

    <EditText
        android:id="@+id/editImpostoValorAberto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/editChequeValorAberto"
        app:layout_constraintStart_toStartOf="@+id/editChequeValorAberto"
        app:layout_constraintTop_toBottomOf="@+id/editChequeValorAberto" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_total"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTotalValorAberto"
        app:layout_constraintStart_toStartOf="@+id/txtImposto"
        app:layout_constraintTop_toTopOf="@+id/editTotalValorAberto" />

    <EditText
        android:id="@+id/editTotalValorAberto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/editImpostoValorAberto"
        app:layout_constraintStart_toStartOf="@+id/editImpostoValorAberto"
        app:layout_constraintTop_toBottomOf="@+id/editImpostoValorAberto" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dia_graph" />

    <ProgressBar
        android:id="@+id/pbMain"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graph" />

    <Button
        android:id="@+id/btn_dia_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_dia"
        app:layout_constraintStart_toStartOf="@+id/txtTotal"
        app:layout_constraintTop_toBottomOf="@+id/editTotalValorAberto" />

    <Button
        android:id="@+id/btn_mes_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_mes"
        app:layout_constraintEnd_toEndOf="@+id/graph"
        app:layout_constraintTop_toTopOf="@+id/btn_dia_graph" />

    <Button
        android:id="@+id/btn_main_data_inicio"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:text="Button"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dia_graph"
        app:layout_constraintStart_toEndOf="@+id/btn_dia_graph" />

    <Button
        android:id="@+id/btn_main_data_fim"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_marginEnd="8dp"
        android:text="Button"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dia_graph"
        app:layout_constraintEnd_toStartOf="@+id/btn_mes_graph" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_inicio"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_data_inicio"
        app:layout_constraintEnd_toEndOf="@+id/btn_main_data_inicio"
        app:layout_constraintStart_toStartOf="@+id/btn_main_data_inicio" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fim"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_data_fim"
        app:layout_constraintEnd_toEndOf="@+id/btn_main_data_fim"
        app:layout_constraintStart_toStartOf="@+id/btn_main_data_fim" />

    <TextView
        android:id="@+id/txtMainPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/pbMain"
        app:layout_constraintStart_toStartOf="@+id/pbMain"
        app:layout_constraintTop_toBottomOf="@+id/pbMain" />

</androidx.constraintlayout.widget.ConstraintLayout>